[feat] Added exam apis.
