# app/Models/Exam.php
@@ -6,5 +6,13 @@ use Illuminate\Database\Eloquent\Model;
 
 class Exam extends Model
 {
-    //
+    public function questions()
+    {
+        return $this->hasMany(Question::class);
+    }
+
+    public function options()
+    {
+        return $this->hasMany(Option::class);
+    }
 }
